# FairFlowAI

./: README.md
src/: model_pipeline.py  pyproject.toml
src/data/: loader.py  preprocessor.py
src/evaluation/: model_evaluator.py
src/fairness/: inprocessing.py  mitigator.py  postprocessing.py  preprocessing.py
